@@ -1,3 +1,14 @@
+2001-02-18  Bruno Haible  <haible@clisp.cons.org>
+
+        * dirkey.d (parse_registry_path, open_reg_key): Use const.
+          (DIR-KEY-OPEN): Likewise.
+          (MAKE_OBJECT_LIST): Don't use '++' inside alloca() argument. Make
+          GC-safe.
+          (DKEY-SEARCH-ITERATOR): Remove redundant STACK operations.
+          (init_iteration_node): Likewise.
+          (DIR-KEY-VALUE): Avoid 'goto'.
+          (DKEY-INFO): Don't use '++' inside alloca() argument.
+
 2001-02-17  Arseny Slobodjuck <ampy@crosswinds.net>
             Bruno Haible  <haible@clisp.cons.org>
 
